Closed
Bug 802316
Opened 13 years ago
Closed 13 years ago
Opacity not working in code
Categories
(Core :: Widget: Win32, defect)
Tracking
()
VERIFIED
FIXED
mozilla19
People
(Reporter: northtech, Assigned: jh.dev0)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
1.18 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; rv:19.0) Gecko/19.0 Firefox/19.0
Build ID: 20121016030544
Steps to reproduce:
In userContent.css opacity not working in this code and because of this not open the contexts menu (about:addons for example):
menupopup, context-menu {
-moz-appearance: none !important;
opacity: 0.96 !important;
background: #f1f4fa !important;
-moz-border-top-colors: #fafafa !important;
-moz-border-bottom-colors: #fafafa !important;
-moz-border-left-colors: #fafafa !important;
-moz-border-right-colors: #fafafa !important;
}
This problem appeared in Fx 18+.
Updated•13 years ago
|
Comment 1•13 years ago
|
||
Regression window(m-c)
Good:
http://hg.mozilla.org/mozilla-central/rev/e6df45a28902
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:18.0) Gecko/18.0 Firefox/18.0 ID:20121007183233
Bad:
http://hg.mozilla.org/mozilla-central/rev/24cf40690042
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:18.0) Gecko/18.0 Firefox/18.0 ID:20121008010834
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=e6df45a28902&tochange=24cf40690042
Suspected: Bug 610713
Regression window(m-i)
Good:
http://hg.mozilla.org/integration/mozilla-inbound/rev/65b95ed309b9
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:18.0) Gecko/18.0 Firefox/18.0 ID:20121007175634
Bad:
http://hg.mozilla.org/integration/mozilla-inbound/rev/7c119b50e7aa
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:18.0) Gecko/18.0 Firefox/18.0 ID:20121007183935
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=65b95ed309b9&tochange=7c119b50e7aa
Blocks: 610713
Status: UNCONFIRMED → NEW
tracking-firefox18:
--- → ?
tracking-firefox19:
--- → ?
Component: General → Widget: Win32
Ever confirmed: true
Version: 19 Branch → 18 Branch
Caused by an apparent conflict between WS_EX_COMPOSITED and WS_EX_LAYERED which opacity uses.
Attachment #672493 -
Flags: review?(roc)
Updated•13 years ago
|
Attachment #672493 -
Flags: review?(roc) → review+
Keywords: regressionwindow-wanted → regression
I noticed I forgot to put the bug number in the patch commit message. Wasn't sure if I should obsolete it and attach a new one. Will that carry the r+ over or will I need to re-request a review?
Comment 4•13 years ago
|
||
Don't worry about it. I'll add it when I check the patch in. And no, you don't need to re-request review if all you're changing is the commit message.
Comment 5•13 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/4a4acb36e670
Should this have a test?
Assignee: roc → jh.dev0
Flags: in-testsuite?
Comment 6•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
status-firefox19:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
Comment 7•13 years ago
|
||
I asked for aurora approval and landed this on aurora as part of bug 802456.
https://hg.mozilla.org/releases/mozilla-aurora/rev/b100957a878e
status-firefox18:
--- → fixed
Comment 8•13 years ago
|
||
Had to back out from aurora, as it looks like either this or bug 802456 caused an intermittent orange.
https://hg.mozilla.org/releases/mozilla-aurora/rev/729dda93df1e
Comment 9•13 years ago
|
||
Repushed to aurora. I don't _think_ it was this bug that caused the orange.
https://hg.mozilla.org/releases/mozilla-aurora/rev/908fdc5e9a2b
Comment 10•13 years ago
|
||
Looks to work as expected on FF 18b6 on Win 7 x64.
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:18.0) Gecko/20100101 Firefox/18.0 (20121227074833)
Comment 11•13 years ago
|
||
Verified Fixed on FF 19b1 too.
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/20100101 Firefox/19.0(20130109111322)
Updated•13 years ago
|
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•