Bug 802316 - Remove WS_EX_COMPOSITED style from popups with WS_EX_LAYERED to prevent invisible context menus. r=roc